--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,12 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Balsamiq+Sans&family=Caveat:wght@500&family=Dongle&family=Indie+Flower&family=PT+Mono&family=Roboto+Mono:wght@100&family=Sacramento&family=Sedgwick+Ave&family=Short+Stack&family=Source+Serif+4:wght@300;500&family=Space+Mono&family=Titillium+Web:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
